--- a/index.html
+++ b/index.html
@@ -1,64 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo"
+          >Web<span class="studio">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студия</a></li>
+          <li>
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address class="address-header list">
+        <a href="mailto:info@devstudio.com" class="contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
       </address>
     </header>
     <!-- Main content -->
     <main>
-      <!-- Представление -->
-      <section>
-        <h1>
+      <!-- Hero -->
+      <section class="hero">
+        <h1 class="hero-titule">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="main-button">Заказать услугу</button>
       </section>
       <!-- Преимущества -->
-      <section>
-        <h2>Преимущества</h2>
-        <ul>
+      <section class="section-advantage">
+        <h2 class="section-titule">Преимущества</h2>
+        <ul class="features-list list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="titule">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="titule">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="titule">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="titule">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -66,13 +77,13 @@
         </ul>
       </section>
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="example-titule">
+        <h2 class="section-titule">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/workexample/example1.png"
-              alt="programer-working-his-desk-office"
+              alt="работающий програмист"
               width="370"
               height="294"
             />
@@ -80,7 +91,7 @@
           <li>
             <img
               src="./images/workexample/example2.png"
-              alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones"
+              alt="веб дизайнер в работе"
               width="370"
               height="294"
             />
@@ -88,7 +99,7 @@
           <li>
             <img
               src="./images/workexample/example3.png"
-              alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
+              alt="креативный дизайнер работает на планшете"
               width="370"
               height="294"
             />
@@ -96,9 +107,9 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team-titule">
+        <h2 class="section-titule">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/comand_photos/ihor_demyanenko.jpg"
@@ -106,8 +117,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="titule">Игорь Демьяненко</h3>
+            <p class="profession">Product Designer</p>
           </li>
           <li>
             <img
@@ -116,8 +127,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="titule">Ольга Репина</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -126,8 +137,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="titule">Николай Тарасов</h3>
+            <p class="profession">Marketing</p>
           </li>
           <li>
             <img
@@ -136,19 +147,27 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="titule">Михаил Ермаков</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <footer class="footer">
+      <a href="./index.html" class="logo"
+        >Web<span class="studio">Studio</span></a
+      >
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="mail-footer"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="mail-footer">+38 096 111 11 11</a>
+        </li>
       </ul>
     </footer>
   </body>
