--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;800;900&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
@@ -156,7 +160,7 @@
     <!-- Footer -->
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="studio">Studio</span></a
+        >Web<span class="studio-footer">Studio</span></a
       >
       <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
       <ul class="list">
